--- a/index.html
+++ b/index.html
@@ -279,9 +279,9 @@
       resultsBox.style.display = "block";
       resultsBox.innerHTML = `
         <strong>Hypotheses:</strong><br>${result.hypotheses}<br><br>
-        <strong>t-statistic:</strong> ${result.t}<br>
+        <strong>Calculated t-value:</strong> ${result.t}<br>
         <strong>Degrees of Freedom:</strong> ${result.df}<br>
-        <strong>Tabulated t-value at 5 percent level of significance:</strong> ${result.tabT}<br><br>
+        <strong>Tabulated t-value at 5 % level of significance:</strong> ${result.tabT}<br><br>
         <strong>Conclusion:</strong> ${result.conclusion}
       `;
     }
